Updated much of the final analysis

--- a/Bibliography.bib
+++ b/Bibliography.bib
@@ -61,3 +61,46 @@
   year={2002},
   publisher={American Medical Association}
 }
+
+@article{doll2011dopaminergic,
+  title={Dopaminergic genes predict individual differences in susceptibility to confirmation bias},
+  author={Doll, Bradley B and Hutchison, Kent E and Frank, Michael J},
+  journal={The Journal of neuroscience},
+  volume={31},
+  number={16},
+  pages={6188--6198},
+  year={2011},
+  publisher={Soc Neuroscience}
+}
+
+@article{m2012role,
+  title={The role of catechol-o-methyltransferase in reward processing and addiction},
+  author={M Tunbridge, E and Huber, A and M Farrell, S and Stumpenhorst, K and J Harrison, P and E Walton, M},
+  journal={CNS \& Neurological Disorders-Drug Targets (Formerly Current Drug Targets-CNS \& Neurological Disorders)},
+  volume={11},
+  number={3},
+  pages={306--323},
+  year={2012},
+  publisher={Bentham Science Publishers}
+}
+
+@article{grant1997age,
+  title={Age at onset of alcohol use and its association with DSM-IV alcohol abuse and dependence: results from the National Longitudinal Alcohol Epidemiologic Survey},
+  author={Grant, Bridget F and Dawson, Deborah A},
+  journal={Journal of substance abuse},
+  volume={9},
+  pages={103--110},
+  year={1997},
+  publisher={Elsevier}
+}
+
+@article{akshoomoff2014nih,
+  title={The NIH Toolbox Cognition Battery: Results from a large normative developmental sample (PING).},
+  author={Akshoomoff, Natacha and Newman, Erik and Thompson, Wesley K and McCabe, Connor and Bloss, Cinnamon S and Chang, Linda and Amaral, David G and Casey, BJ and Ernst, Thomas M and Frazier, Jean A and others},
+  journal={Neuropsychology},
+  volume={28},
+  number={1},
+  pages={1},
+  year={2014},
+  publisher={American Psychological Association}
+}
